2016-06-25  Per Bothner  <per@bothner.com>

	* Path.java (readAllBytes): Handle case if unknown content-length.

2016-06-22  Per Bothner  <per@bothner.com>

	* JLineInPort.java: Remove obsolete support for JLine version 2.

2016-06-17  Per Bothner  <per@bothner.com>

	* TtyInPort.java (signIntHandler): New field.

	* QueueReader.java (appendEOF): Add missing notifyAll call.

2016-06-15  Per Bothner  <per@bothner.com>

	* JLineInPort.java (parse): Update to use new ParseContext parameter.

2016-06-14  Per Bothner  <per@bothner.com>

	Pass windows size events from DomTem to JLine.
	* JLineInPort.java (setSIze): New method.

	* CheckConsole.java (useJLine): New ThreadLocation; new method.
	(useDomTerm): New ThreadLocation; new method.
	(forDomTerm): Use isDomTerm method rather than checking outInitial.
	* JLineInPort.java: Various tweaks and small fixes.

	* TtyInPort.java (make): Only create a JLineInPort if useJLine.
	* OutPort.java (finalizeAction): Rename field to flags.
	(IS_DOMTERM): New flag constant.
	(isDomTerm, setDomTerm): New methods.

2016-06-11  Per Bothner  <per@bothner.com>

	Handle setting prompt1 and prompt2 templates from command-line.
	* TtyInPort.java (prompt1, prompt2): Move to ...
	* CheckConsole.java: ... here to avoid class initialization
	order problem.
	* TtyInPort.java (expandPrompt): Make static.
	* JLineInPort.java: Update.

2016-06-05  Per Bothner  <per@bothner.com>

	* JLineInPort.java: Major changes to tab-completion for jline3.
	(parseForComplete): New method.

	* DomTermErrorStream.java: Renamed to ...
	* TermErrorStream.java: and add support for generic ANSI terminals.

2016-06-02  Per Bothner  <per@bothner.com>

	* JLine2InPort.java: Rename to ...
	* JLineInPort.java ... because we primarily support JLine version 3.

	Add support for using JLine3.  Relatedly, re-do prompt handling.
	* JLine2InPort.java: Add support for version 3 of JLine library.
	Specifically handle multiline inputs.